--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.mvc.view.suffix: .jsp
 
 spring.datasource.url = jdbc:mysql://localhost:3306/demo?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username = root
-spring.datasource.password = Admin123
+#spring.datasource.password = Admin123
 
+site.urlport=http://localhost:8990
